--- a/src/components/cardQuestions/styles.css
+++ b/src/components/cardQuestions/styles.css
@@ -41,9 +41,10 @@
   border-radius: 28px;
   cursor: pointer;
   font-size: medium;
-  width: 200px;
+  width: 50%;
   background-color: blue;
   color: white;
+  padding: 10px 0px;
 }
 .divButton {
   text-align: center;
