--- a/src/components/cardQuestions/styles.css
+++ b/src/components/cardQuestions/styles.css
@@ -1,36 +1,30 @@
 @import '~slick-carousel/slick/slick.css';
 @import '~slick-carousel/slick/slick-theme.css';
 
-.divDots {
-  background-color: #ddd;
-  border-radius: 10px;
-  padding: 10px;
-}
-.ulDots {
-  margin: 0;
-}
-.divCustomPaging {
-  width: 30px;
-  color: blue;
-  border: 1px blue solid;
+.divWrapper {
+  background-color: #f1c40f;
+  height: 100%;
+  width: 100%;
 }
 .cardDiv {
   text-align: center;
   border: 1px solid black;
-  background-color: thistle;
-  max-width: 600px;
+  background-color: #c0392b;
+  max-width: 400px;
+  height: 500px;
 }
 .divmain {
-  width: 100%;
+  width: 90%;
+  height: 450px;
+  margin: 0% 5%;
   text-align: center;
-  margin-top: 30px;
 }
 .spanCard {
   font-weight: bold;
 }
-
 .title {
   width: 100%;
+  font-size: 25px;
 }
 .divQuestions {
   display: flex;
@@ -48,10 +42,9 @@
 }
 .divButton {
   text-align: center;
-  position: sticky;
-  margin-top: 30px;
+  margin-top: 80px;
 }
 .pQuestion {
   color: white;
-  font-size: 25px;
+  font-size: 20px;
 }
